# gnofract4d

./: .coveragerc  .flake8  .gitignore  .gitmodules  .mailmap  .travis.yml  COPYING  LICENSE  MANIFEST.in  PKG-INFO  README  README.md  Todo  _conf_data.py.in  benchfct.py  benchmark.py  contributing.html  coverage.xml  createdocs.py  docker-compose.yml  features.html  gallery.html  gnofract4d  gnofract4d-mime.xml  gnofract4d.css  gnofract4d.desktop  index.html  io.github.fract4d.desktop  links.html  meson.build  meson_options.txt  mkstatic.py  new-developer-manual.md  pylintrc  pylintrc_new  pytest.ini  screencast.html  screenshots.html  setup.cfg  setup.py  (+7 more)
.github/: codecov.yml
buildtools/: my_bdist_rpm.py  my_build.py  my_build_ext.py  my_install_egg_info.py  my_install_lib.py
debian/: changelog  control  copyright  docs  files  menu  rules  watch
doc/: Makefile.am  commands.html  continuous_zooming.md  formula_sharing.md  fuil-manual.md  gnofract4d.1  manual.md  mathlibs.md  stdlib.html
docker/: Dockerfile
docs/: index.html  index.xml  sitemap.xml
examples/: README.md
examples/cpp/: CMakeLists.txt  Dockerfile  benchmark.cpp  custom_formula.cpp  custom_formula.sh  custom_mandelbrot_formula.c  mp_benchmark.sh  mp_double.h  mp_formula.cpp  mp_mandelbrot.sh  multithread_mandelbrot.cpp  multithread_mandelbrot.sh  raw_mandelbrot.cpp  raw_mandelbrot.sh  simple_mandelbrot.cpp  simple_mandelbrot.sh
formulas/: experiments.cfrm  experiments.frm  fractint-builtin.frm  fractint-g4.frm  fractint.cfrm  fractint.ucl  gf4d.cfrm  gf4d.frm  gf4d.uxf  jh.ucl  standard.ucl  sterling2.frm  sterling2.txt  tutorial.frm  xaos.cfrm
fract4d/: __init__.py  absyn.py  animation.py  b.sh  browser_model.py  cache.py  canon.py  checkalloc.py  codegen.py  colorizer.py  createdocs.py  encoder.py  event.py  fc.py  fctutils.py  ffloat.py  formdb.py  formsettings.py  fractal.py  fractconfig.py  fractlexer.py  fractmain.py  fractparser.py  fractsettings.py  fracttypes.py  fsymbol.py  function.py  gradient.py  graph.py  image.py  instructions.py  ir.py  lex.py  lextab.py  mapmatcher.py  messages.py  optimize.py  options.py  parfile.py  parsetab.py  (+45 more)
fract4d/c/: MTFractWorker.cpp  MTFractWorker_gmp.cpp  STFractWorker.cpp  STFractWorker_gmp.cpp  cmap.cpp  cmap.h  cmap_gmp.cpp  color.h  fate.h  fptest.cpp  fract4d_stdlib_exports.cpp  fract4dmodule.cpp  fract4dmodule_gmp.cpp  fractFunc.cpp  fractFunc.h  fractFunc_gmp.cpp  fractWorker.h  fractWorker_public.h  fract_public.h  fract_stdlib.cpp  fract_stdlib.h  image.cpp  image.h  imageIO.cpp  imageIO_gmp.cpp  image_gmp.cpp  image_public.h  meson.build  pf.h  pointFunc.cpp  pointFunc_gmp.cpp  pointFunc_public.h  stats.cpp  stats.h  threadpool.h  vectors.h  win32func.cpp
fract4d/c/fract4dc/: arenas.cpp  arenas.h  calcargs.cpp  calcargs.h  calcs.cpp  calcs.h  color_maps.cpp  colormaps.cpp  colormaps.h  common.cpp  common.h  controllers.cpp  controllers.h  fdsite.cpp  fdsite.h  functions.cpp  functions.h  images.cpp  images.h  loaders.cpp  loaders.h  pysite.cpp  pysite.h  sites.cpp  sites.h  utils.cpp  utils.h  workers.cpp  workers.h
fract4d/c/model/: MTFractWorker.cpp  STFractWorker.cpp  XaosFractWorker.cpp  calcfunc.cpp  calcfunc.h  calcoptions.h  color.h  colormap.cpp  colormap.h  colorutils.cpp  colorutils.h  enums.h  fractfunc.cpp  fractfunc.h  fractgeometry.h  image.cpp  image.h  imagereader.cpp  imagereader.h  imageutils.cpp  imageutils.h  imagewriter.cpp  imagewriter.h  pointfunc.cpp  pointfunc.h  site.cpp  site.h  stats.cpp  stats.h  threadpool.h  vectors.h  worker.cpp  worker.h
fract4d_compiler/: __init__.py  absyn.py  cache.py  canon.py  codegen.py  fc.py  fctutils.py  fractlexer.py  fractparser.py  fracttypes.py  fsymbol.py  function.py  graph.py  instructions.py  ir.py  lex.py  lextab.py  optimize.py  parsetab.py  preprocessor.py  stdlib.py  test_absyn.py  test_cache.py  test_canon.py  test_codegen.py  test_fc.py  test_fctutils.py  test_fractlexer.py  test_fractparser.py  test_fracttypes.py  test_graph.py  test_optimize.py  test_preprocessor.py  test_symbol.py  test_translate.py  translate.py  yacc.py
fract4dgui/: AVIGen.py  DlgAdvOpt.py  FCTGen.py  PNGGen.py  adjustment.py  angle.py  application_widgets.py  application_window.py  autozoom.py  browser.py  browserTreeModel.py  browser_model.py  createdocs.py  dialog.py  director.py  director_dialogs.py  director_prefs.py  flickr_assistant.py  fourway.py  gnofract4d.css  gnofract4d.gresource.xml  gradientCellRenderer.py  gtkfractal.py  gtkgradient.py  gtkio.py  hig.py  icons.py  ignore_info.py  main_window.py  model.py  painter.py  preferences.py  renderqueue.py  settings.py  settings_widgets.py  shortcuts-gnofract4d.ui  table.py  test.py  test_angle.py  test_browser.py  (+18 more)
fractutils/: __init__.py  checkalloc.py  fetch.py  flickr.py  formdb.py  formulas.py  get.py  makemap.py  makemapgui.py  mapmatcher.py  parfile.py  ppfrm.py  profutil.py  slave.py  splitugr.py  stub_subprocess.py  test.py  test_flickr.py  test_formdb.py  test_makemap.py  test_parfile.py  test_slave.py
gnofract4d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
help/: 404.html  index.html  index.xml  sitemap.xml
manual/: about.html  bugs.html  cmdref.html  compiler.html  config.toml  formref.html  index.html  internals.html  maths.html  using.html
maps/: AM-1.cs  Autumn.cs  BauerWeb.cs  BehrQuiltedRed.cs  Bujumbura.cs  Carlson1.map  Digiorg1.map  Digiorg2.map  Gallet01.map  Gallet02.map  Gallet03.map  Gallet04.map  Gallet05.map  Gallet06.map  Gallet07.map  Gallet08.map  Gallet09.map  Gallet10.map  Gallet11.map  Gallet12.map  Gallet13.map  Gallet14.map  Gallet15.map  Gallet16.map  Gallet17.map  Gallet18.map  Greenhouse.cs  Lindaa01.map  Lindaa02.map  Lindaa03.map  Lindaa04.map  Lindaa05.map  Lindaa06.map  Lindaa07.map  Lindaa08.map  Lindaa09.map  Lindaa10.map  Lindaa11.map  Lindaa12.map  Lindaa14.map  (+210 more)
pixmaps/: gnofract4d-logo.xcf  gnofract4d-logo.xpm
scripts/: guest_cmd.py  mkall.sh  mkdeb.sh  mkdist.py  mkiso.sh  mkrpm.sh  vmrunner.py
snap/: snapcraft.yaml
testdata/: 20_untitled_5.fct  20_untitled_5a.fct  egg.fct  (+101 more)
(+188 files in other folders)
